# blog_manage

./: README.md  app.py  pyproject.toml
src/blog_manage/: blog_manage.py  cli.py  utils.py
tests/: articles.json  template.html
tests/articles/19700101/: index.html  index.md
tests/articles/19701231/: index.html  index.md
